...
    
    var presenter: WebViewPresenterProtocol?
    
    // MARK: - IB Outlets
    @IBOutlet private var webView: WKWebView!
    @IBOutlet private var progressView: UIProgressView!
    @IBOutlet var backButton: UIButton!
    
    weak var delegate: WebViewControllerDelegate?
    
    // MARK: - Overrides Methods
    override func viewDidLoad() {
        super.viewDidLoad()
        
        
        backButton.tintColor = UIColor(named: "YP Black")
        
        webView.navigationDelegate = self
        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()
        loadAuthView()
        updateProgress()
    }
    
    override func viewWillAppear(_ animated: Bool) {
...
