...
                                <rect key="frame" x="166.66666666666666" y="396" width="60" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="60" id="7xc-i8-Mix"/>
                                    <constraint firstAttribute="height" constant="60" id="LZa-Wn-a0z"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="Authenticate" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pqd-23-ALq">
                                <rect key="frame" x="16" y="680" width="361" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="Zay-hM-7wk"/>
                                </constraints>
...
