//
//  ImageFeedUITests.swift
//  ImageFeedUITests
//
//  Created by Yulianna on 27.02.2025.
//

import XCTest
@testable import Image_Feed
class ImageFeedUITests: XCTestCase {
    private let app = XCUIApplication() // переменная приложения
    
    override func setUpWithError() throws {
        continueAfterFailure = false // настройка выполнения тестов, которая прекратит выполнения тестов, если в тесте что-то пошло не так
        
        app.launch() // запускаем приложение перед каждым тестом
    }
    
    func testAuth() throws {
        app.buttons["Authenticate"].tap()
        let webView = app.webViews["UnsplashWebView"]
        
        XCTAssertTrue(webView.waitForExistence(timeout: 5))
        
        let loginTextField = webView.descendants(matching: .textField).element
        XCTAssertTrue(loginTextField.waitForExistence(timeout: 5))
        
        loginTextField.tap()
        loginTextField.typeText("anzhelikaroud@yandex.ru")
        
        app.toolbars.buttons["Done"].tap()
        webView.swipeUp()
        
        let passwordTextField = webView.descendants(matching: .secureTextField).element
        XCTAssertTrue(passwordTextField.waitForExistence(timeout: 5))
                
                passwordTextField.tap()
                passwordTextField.typeText("14064674")
                webView.swipeUp()
                
                webView.buttons["Login"].tap()
                
                let tablesQuery = app.tables
                let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
                
                XCTAssertTrue(cell.waitForExistence(timeout: 5))
            }
            
    func testFeed() throws {
        sleep(3)
        let tablesQuery = app.tables
        
        let cell = tablesQuery.children(matching: .cell).element(boundBy: 0)
        cell.swipeUp()
        
        sleep(2)
        
        let cellToLike = tablesQuery.children(matching: .cell).element(boundBy: 1)
        
        cellToLike.buttons["likeButtonOff"].tap()
        cellToLike.buttons["likeButtonOn"].tap()
        
        sleep(2)
        
        cellToLike.tap()
        
        sleep(2)
        
        let image = app.scrollViews.images.element(boundBy: 0)
                
                image.pinch(withScale: 3, velocity: 1)
                
                image.pinch(withScale: 0.5, velocity: -1)
                
                let navBackButtonWhiteButton = app.buttons["backButton"]
                navBackButtonWhiteButton.tap()
            }
            
            func testProfile() throws {
                sleep(3)
                app.tabBars.buttons.element(boundBy: 1).tap()
                
                XCTAssertTrue(app.staticTexts["Yulianna Kononetova"].exists)
                XCTAssertTrue(app.staticTexts["roudystorm"].exists)
                
                app.buttons["logoutButton"].tap()
                
                app.alerts["Пока, пока!"].scrollViews.otherElements.buttons["Да"].tap()
            }
        }
